# DA-DVIO

./: .gitignore  README.md  README.txt  environment.yml  gitignore  readme  train.py
DPViewer/: z02_trial_01.kitti
DPViewer/dpviewer/: CMakeLists.txt
DPViewer/dpviewer.egg-info/: PKG-INFO
config/: DEVO_base_2gpu.conf  davis240c.yaml  davis240c_dpvo.yaml  davis240c_no_imu.yaml  default_devo.yaml  euroc_imu.yaml  kitti_dpvo_imu.yaml  zed_imu.yaml
devo/: ba.py  config.py  dba.py  devo.py  enet.py  logger.py  multi_sensor.py  plot_utils.py  projective_ops.py  res_net_extractor.py  selector.py
devo/__pycache__/: dba.cpython-310.pyc.140423529203376
devo/data_readers/: augmentation.py  projective_ops.py  rgbd_utils.py  tartan.py
devo/geoFunc/: trans.py
dpvo/: config.py  dpvo.py  net (copy).py  net.py
dpvo/data_readers/: kitti.py
dpvo/fastba/: BAFactor.h  ba.cpp  ba.py  ba_cuda.cu
dpvo/loop_closure/: optim_utils.py
dpvo/loop_closure/__pycache__/: optim_utils._format-19.py310.1.nbc  optim_utils._format-19.py310.nbi  optim_utils.reduce_edges-23.py310.1.nbc  optim_utils.reduce_edges-23.py310.nbi
script/: realtime_slam.py
script/kitti/: evaluate_kitti.py  evaluate_kitti_depth.py  pp_kitti_mat.py  prep_kitti.py
script/zed/: evaluate_zed.py  evaluate_zed_depth.py  extract_zed_depth_real_from_bag_rosbags.py  prep_data_euroc.py
utils/: bag_utils.py  eval_utils (copy).py  eval_utils.py  eval_utils.py.backup  event_utils.py  load_utils.py  transform_utils.py
